# cinema_game

./: .dockerignore  .gitignore  .gitmodules  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  find_real_chain.py  manage.py  pyproject.toml  render.yaml  requirements.txt  test_api.py  use_curator.py
.github/workflows/: python-package.yml
backend/: .env.example  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/agents/: base.py  puzzle_agent.py  validation_agent.py
backend/models/: game.py
backend/routes/: game.py
backend/tests/: test_config.py  test_database.py  test_definitions.py  test_extract_json.py  test_models.py  test_routes.py  test_tmdb.py
backend/tools/: definitions.py  tmdb.py
cinema/: asgi.py  directories.py  generate_key.py  imdb_config.py  settings.py  urls.py  wsgi.py
cinema/cinegame/: fame.py  game.py  game_maker.py
cinema/cinegraph/: extractor.py  fame.py  grapher.py  imdb_grapher.py  imdb_tsv.py  node_types.py  professional_path.py  weights.py
cinema/core/: apps.py  views.py
cinema/core/scripts/: make_imdb_professional_graph.py  page_rank.py
cinema/gameplay/: apps.py  models.py  tests.py  urls.py  utils.py  views.py  views_frontend.py
cinema/gameplay/migrations/: 0001_initial.py
cinema/gameplay/templates/gameplay/: actor_chain_game.html
cinema/tests/: data4tests.py  fixture_imbd_tsv.py  small_professional_graph.pkl  test_directories.py  test_example.py  test_extractor.py  test_fame.py  test_game_maker.py  test_grapher.py  test_imdb_tsv.py  test_mock_imbd.py  test_node_types.py  test_professional_path.py  test_weights.py
cinema_app/: manage.py
cinema_app/cinema_app/: settings.py  urls.py  wsgi.py
cinema_app/gameplay/: models.py
cinema_app/gameplay/migrations/: 0001_initial.py
cinema_game_backend/: _version.py  config.py  database.py  dependencies.py  directories.py  env.py  experiments_llm_harness.py  main.py
cinema_game_backend/agents/: base.py  puzzle_agent.py  validation_agent.py
cinema_game_backend/experiments/: export.py  replay.py
cinema_game_backend/models/: experiment.py  game.py  tmdb.py
cinema_game_backend/routes/: auth.py  game.py
cinema_game_backend/tests/: test_config.py  test_database.py  test_definitions.py  test_dependencies.py  test_directories.py  test_export.py  test_extract_json.py  test_models.py  test_puzzle_agent.py  test_replay.py  test_routes.py  test_tmdb.py  test_validation_agent.py
cinema_game_backend/tools/: tmdb.py
data/: README.md  actors.csv  movies.csv  top16k.pkl
frontend/: .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/game/[id]/: page.tsx
functional_tests/: __init__.py  conftest.py  test_env_setup.py  test_run_agent_loop.py  test_validation_agent.py
models/: README.md
notebooks/: README.md
scripts/: manage_beta_users.py  run_llm_experiments.py
secrets/: .env.example  README.md
tests/: README.md
