[tool.poetry]
name = "cinema-game-backend"
version = "2.1.0"
description = "Cinema Game — connect actors through shared movies"
authors = ["Chivon Powers <chivon.powers@gmail.com>", "Reuben Brasher <rkbrasher@gmail.com>"]
license = "mit"
readme = "README.md"
packages = [{include = "cinema_game_backend"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.135.2"
uvicorn = "^0.30.0"
anthropic = "^0.40.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
pydantic = "^2.12.5"
langsmith = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.6"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:langsmith.wrappers._openai_agents is deprecated:DeprecationWarning",
    "ignore:Please use `import python_multipart`:PendingDeprecationWarning",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/functional_tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
